--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "eslint --ext .js,.vue src server",
+    "start": "nodemon server",
     "test": "npm run lint",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
-    "mongodump": "mongodump -d mean -o ./database",
+    "mongodump": "mongodump -d tongx_config_server -o ./database",
+    "mongorestore": "mongorestore -d tongx_config_server --drop ./database/tongx_config_server",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
-    "new": "plop"
+    "new": "create-component "
   },
   "husky": {
     "hooks": {
@@ -33,48 +35,86 @@
     "admin-template"
   ],
   "dependencies": {
+    "acl": "^0.4.11",
+    "animate.css": "^3.7.2",
     "axios": "0.18.0",
+    "bcrypt": "^3.0.2",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.2",
     "clipboard": "2.0.4",
     "codemirror": "5.44.0",
+    "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "crypto": "^1.0.1",
+    "dotenv": "^6.0.0",
     "driver.js": "0.9.5",
     "dropzone": "5.5.1",
     "echarts": "4.1.0",
-    "element-ui": "2.12.0",
+    "element-ui": "^2.13.0",
+    "express": "^4.16.3",
+    "express-async-handler": "^1.1.3",
+    "express-jwt": "^5.3.1",
+    "express-validation": "^1.0.2",
+    "express-winston": "^3.1.0",
     "file-saver": "2.0.1",
     "form-create": "^1.6.1",
+    "formidable": "^1.2.1",
     "fuse.js": "3.4.4",
+    "helmet": "^3.12.0",
+    "http-errors": "^1.6.3",
+    "joi": "^13.3.0",
     "js-cookie": "^2.2.0",
     "jsonlint": "1.6.3",
+    "jsonwebtoken": "^8.2.1",
     "jszip": "3.2.0",
+    "lodash": "latest",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.4.0",
+    "mongoose-autopopulate": "^0.9.1",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.17.5",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "owasp-password-strength-test": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path-to-regexp": "2.4.0",
+    "qiniu": "^7.3.1",
+    "rxjs": "6.2.0",
+    "rxjs-compat": "^6.0.0-rc.0",
     "screenfull": "4.2.0",
+    "seneca": "^3.8.4",
+    "seneca-amqp-transport": "^2.2.0",
     "showdown": "1.9.0",
     "sortablejs": "1.8.3",
-    "swiper": "^5.4.1",
+    "swagger-ui-express": "^3.0.9",
+    "swiper": "^5.4.2",
     "tui-editor": "1.3.2",
     "validator": "^10.11.0",
     "vue": "2.6.8",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-carousel": "^0.18.0",
     "vue-count-to": "1.0.13",
-    "vue-google-maps": "^0.1.21",
     "vue-i18n": "7.3.2",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.2",
     "vuedraggable": "2.17.0",
     "vuex": "3.1.0",
-    "vxe-table": "^2.9.1",
-    "vxe-table-plugin-element": "^1.8.4",
+    "vxe-table": "^2.8.33",
+    "vxe-table-plugin-element": "^1.8.2",
     "webpack-dev-server": "^3.1.10",
-    "xe-utils": "^2.4.5",
-    "xlsx": "0.14.1"
+    "winston": "^3.2.1",
+    "xe-utils": "^2.4.4",
+    "xlsx": "0.14.1",
+    "yarn": "^1.15.2",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
     "@babel/register": "7.0.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~10.3.0",
     "@vue/cli-plugin-babel": "3.5.0",
     "@vue/cli-plugin-eslint": "3.5.1",
@@ -87,14 +127,24 @@
     "babel-plugin-component": "^1.1.1",
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
+    "codelyzer": "4.3.0",
+    "concurrently": "^3.5.1",
     "connect": "3.6.6",
     "eslint": "5.15.1",
     "eslint-plugin-vue": "5.2.2",
     "husky": "1.3.1",
+    "jasmine-core": "~3.1.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^3.1.3",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "1.1.0",
     "lint-staged": "7.2.2",
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
     "plop": "2.3.0",
+    "protractor": "^5.4.1",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
@@ -112,5 +162,16 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "description": "- **M**ongoDB : Document database – used by your back-end application to store its data as JSON (JavaScript Object Notation) documents - **E**xpress (sometimes referred to as Express.js): Back-end web application framework running on top of Node.js - **N**ode.js : JavaScript runtime environment – lets you implement your application back-end in JavaScript",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/noyota/men-vue.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/noyota/men-vue/issues"
+  },
+  "homepage": "https://github.com/noyota/men-vue#readme"
 }
