--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
-VUE_APP_BASE_API = 'http://localhost:4049/api'
-VUE_APP_EXAMPLE_API = '/api'
+VUE_APP_BASE_API = 'http://localhost:4049/api-v1'
+VUE_APP_EXAMPLE_API = '/api-v1'
 ENV = 'development'
-
+PORT = 9527
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
 # It only does one thing by converting all import() to require().
