--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "validator": "^10.11.0",
     "vue": "2.6.8",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-carousel": "^0.18.0",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
     "vue-router": "3.0.2",
@@ -107,7 +108,7 @@
     "winston": "^3.2.1",
     "xe-utils": "^2.4.4",
     "xlsx": "0.14.1",
-    "yarn": "^1.15.2",
+    "yarn": "^1.22.5",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
